# summit_xl_common

./: .gitignore  LICENSE  README.md
moveit/summit_xl_vx300s_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
summit_xl_common/: CHANGELOG.rst  CMakeLists.txt  package.xml  package.xml~
summit_xl_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
summit_xl_control/config/: rbkairos_10_omni_control.yaml  rbkairos_10_skid_control.yaml  rbkairos_5_omni_control.yaml  rbkairos_5_skid_control.yaml  robot_control.yaml  summit_xl_a_control.yaml  summit_xl_b_control.yaml  summit_xl_c_control.yaml  summit_xl_control.yaml  summit_xl_control_a.yaml  summit_xl_control_b.yaml  summit_xl_control_diff_drive.yaml  summit_xl_diffdrive_control.yaml  summit_xl_hls_control.yaml  summit_xl_omni_control.yaml  summit_xl_sim_control.yaml  summit_xl_skid_control.yaml  summit_xl_steel_control.yaml  summit_xl_steel_omni_control.yaml  summit_xl_steel_skid_control.yaml  summit_xl_x_omni_control.yaml  summit_xls_control.yaml  twist_mux.yaml
summit_xl_control/launch/: kinova_control.launch  summit_xl_control.launch  summit_xl_control_4servos.launch  summit_xl_control_sim.launch  summit_xl_hls_control.launch  summit_xl_multi_control.launch  summit_xl_omni_control.launch  summit_xl_steel_control.launch  summit_xl_steel_multi_control.launch  trossen_control.launch  ur5e_control.launch
summit_xl_description/: CHANGELOG.rst  CMakeLists.txt  gazebo_color_list.txt  mainpage.dox  package.xml  package.xml~  readme.txt
summit_xl_description/doc/: tf_xwam.txt
summit_xl_description/launch/: default.launch.py  summit_xl_hl_ext_rviz.launch  summit_xl_hl_rviz.launch  summit_xl_hls_omni_rviz.launch  summit_xl_hls_rviz.launch  summit_xl_hls_state_robot.launch  summit_xl_jr2_rviz.launch  summit_xl_nocam_rviz.launch  summit_xl_omni_rviz.launch  summit_xl_rviz.launch  summit_xl_state_robot.launch  summit_xl_steel_omni_rviz.launch  summit_xls_rviz.launch
summit_xl_description/robots/: SXL00-210422AA.urdf.xacro  robot.urdf  summit_x.urdf.xacro  summit_x_std.urdf.xacro  summit_xl.urdf.xacro  summit_xl_170214A.urdf.xacro  summit_xl_170323A.urdf.xacro  summit_xl_170420A.urdf.xacro  summit_xl_gen_std.urdf.xacro  summit_xl_hl.urdf.xacro  summit_xl_hl_ext.urdf.xacro  summit_xl_hl_omni.urdf.xacro  summit_xl_hls.urdf.xacro  summit_xl_hls_omni.urdf  summit_xl_hls_omni.urdf.xacro  summit_xl_jr2.urdf.xacro  summit_xl_multi.urdf.xacro  summit_xl_nocam.urdf.xacro  summit_xl_omni.urdf.xacro  summit_xl_std.urdf.xacro  summit_xl_steel_multi.urdf.xacro  summit_xl_steel_omni.urdf.xacro  summit_xl_tix_std.urdf.xacro  summit_xls.urdf.xacro  summit_xls_cobolleague.urdf.xacro  summit_xls_new_std.urdf.xacro  summit_xls_std.urdf.xacro
summit_xl_description/test/: test_robotnik_xacro.py
summit_xl_description/urdf/: inertia.urdf.xacro  materials.xacro  ros2_control.urdf.xacro
summit_xl_description/vrep/: Robotnik_Summit_XL.ttm  Robotnik_Summit_XL.ttt  Robotnik_Summit_XL140701.ttm  Robotnik_Summit_XL_STD.ttm  Robotnik_Summit_XL_skid_140629.ttm  version.txt
summit_xl_localization/: CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
summit_xl_localization/config/: amcl.yaml  slam_gmapping.yaml
summit_xl_localization/launch/: amcl.launch  localization_complete.launch  map_saver.launch  map_server.launch  navsat_transform_node.launch  px4_config_new.yaml  rl_utils.launch  robot_localization_complete.launch  robot_localization_odom.launch  robot_localization_world.launch  slam_gmapping.launch
summit_xl_localization/scripts/: imu_quat_to_rpy.py  magneto.txt  odom_to_pose_rpy.py  save_map.sh  set_datum.sh  test.py
summit_xl_localization/src/: local_tf.cpp  navsat_transform_new.cpp  navsat_transform_new_node.cpp  robot_localization_utils.cpp
summit_xl_navigation/: CHANGELOG.rst  CMakeLists.txt  package.xml  package.xml~
summit_xl_navigation/config/: amcl.yaml  base_local_planner_params.yaml  controllers.yaml  costmap_common_params.yaml  eband_global_costmap_params.yaml  eband_local_planner_diff_params.yaml  global_costmap_params_map.yaml  global_costmap_params_map_nomap.yaml  global_costmap_params_no_map.yaml  global_costmap_world_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move.yaml  move_base.yaml  move_base_flex.yaml  move_base_params.yaml  planners.yaml  recovery_behaviors.yaml  teb_local_planner_diff_params.yaml  teb_local_planner_omni.yaml  teb_local_planner_omni_params.yaml  teb_local_planner_params.yaml  teb_local_planner_steel_params.yaml  teb_local_planner_world_params.yaml
summit_xl_navigation/config_rviz/: rviz_satellite.rviz
summit_xl_navigation/launch/: amcl.launch  dockers.launch  map_server.launch  move.launch  move_base.launch  move_base_amcl.launch  move_base_amcl_mapserver.launch  move_base_eband.launch  move_base_flex.launch  move_base_gmapping.launch  move_base_nomap.launch  move_base_teb.launch  move_base_teb_amcl.launch  move_base_world.launch  navigation_complete.launch  rbkairos_docking.launch  rbkairos_move_base.launch  rgbd_to_laserscan.launch  rviz_satellite.launch  save_map.sh  scan_filter.launch  summit_xl_docking.launch  summit_xl_gmapping.launch  summit_xl_nav.launch  summit_xls_docking.launch  tf_publishers.launch
summit_xl_navigation/summit_xl_a_config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params_map.yaml  local_costmap_params.yaml  teb_local_planner_omni.yaml  teb_local_planner_params.yaml
summit_xl_navigation/summit_xl_b_config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params_map.yaml  global_costmap_params_no_map.yaml  local_costmap_params.yaml  teb_local_planner_omni.yaml  teb_local_planner_params.yaml
summit_xl_navigation/summit_xl_c_config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params_map.yaml  global_costmap_params_no_map.yaml  local_costmap_params.yaml  move_base_params.yaml  (+2 more)
summit_xl_pad/: CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
summit_xl_percpetion/: package.xml
(+558 files in other folders)
