<package>
  <name>summit_xl_common</name>
  <version>1.1.3</version>
  <description>URDF description of the Summit XL and Summit XL HL, platform messages and other files for simulation.</description>


  <license>BSD</license>

  <url type="website">http://ros.org/wiki/summit_xl_common</url>
  <url type="repository">https://github.com/RobotnikAutomation/summit_xl_common.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/summit_xl_common/issues</url>

  <author email="rguzman@robotnik.es">Roberto Guzmán</author>
  <author email="rnavarro@robotnik.es">Román Navarro</author>

  <maintainer email="asoriano@robotnik.es">Angel Soriano</maintainer>
  <maintainer email="avillena@robotnik.es">Álvaro Villena</maintainer>
  <maintainer email="dredo@robotnik.es">David Redó</maintainer>
  <maintainer email="aarnal@robotnik.es">Alejandro Arnal</maintainer>
  <maintainer email="mbosch@robotnik.es">Marc Bosch</maintainer>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>summit_xl_description</run_depend>
  <run_depend>summit_xl_localization</run_depend>
  <run_depend>summit_xl_navigation</run_depend>
  <run_depend>summit_xl_pad</run_depend>
  <run_depend>summit_xl_control</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
