<?xml version="1.0"?>
<package>
  <name>summit_xl_description</name>
  <version>1.1.2</version>
  <description> URDF description of the Summit XL and Summit XL HL and omni versions </description>

  <url type="website">http://ros.org/wiki/summit_xl_description</url>
  <url type="repository">https://github.com/RobotnikAutomation/summit_xl_common.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/summit_xl_common/issues</url>

  <author email="rguzman@robotnik.es">Roberto Guzmán</author>
  <author email="rnavarro@robotnik.es">Román Navarro</author>
  <author email="jarino@robotnik.es">Jorge Ariño</author> 

  <maintainer email="cvillar@robotnik.es">Carlos Villar</maintainer>
 
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>robotnik_sensors</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>robotnik_sensors</run_depend>
  
</package>



