<?xml version="1.0"?>
<?xml-model
    href="http://download.ros.org/schema/package_format3.xsd"
    schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>summit_xl_description</name>
  <version>1.1.3</version>
  <description>
    URDF description of the Summit XL and Summit XL HL and
    omni versions.
  </description>

  <maintainer email="asoriano@robotnik.es">Angel Soriano</maintainer>
  <maintainer email="avillena@robotnik.es">Álvaro Villena</maintainer>
  <maintainer email="dredo@robotnik.es">David Redó</maintainer>
  <maintainer email="aarnal@robotnik.es">Alejandro Arnal</maintainer>
  <maintainer email="mbosch@robotnik.es">Marc Bosch</maintainer>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/summit_xl_description</url>
  <url type="repository">https://github.com/RobotnikAutomation/summit_xl_common.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/summit_xl_common/issues</url>

  <author email="rguzman@robotnik.es">Roberto Guzmán</author>
  <author email="rnavarro@robotnik.es">Román Navarro</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robotnik_sensors</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
