<?xml version="1.0"?>
<package>
  <name>summit_xl_localization</name>
  <version>1.1.3</version>
  <description>The summit_xl_localization package</description>

  <maintainer email="asoriano@robotnik.es">Angel Soriano</maintainer>
  <maintainer email="avillena@robotnik.es">Álvaro Villena</maintainer>
  <maintainer email="dredo@robotnik.es">David Redó</maintainer>
  <maintainer email="aarnal@robotnik.es">Alejandro Arnal</maintainer>
  <maintainer email="mbosch@robotnik.es">Marc Bosch</maintainer>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>

  <url type="website">http://ros.org/wiki/summit_xl_localization</url>
  <url type="repository">https://github.com/RobotnikAutomation/summit_xl_common.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/summit_xl_common/issues</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>robot_localization</build_depend>
  <build_depend>geographic_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>robotnik_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>gmapping</build_depend>
  <build_depend>amcl</build_depend>
  <build_depend>map_server</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>geographic_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>robotnik_msgs</run_depend>
  <run_depend>mavros_msgs</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>amcl</run_depend>
  <run_depend>map_server</run_depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosbag</test_depend>

</package>
