<?xml version="1.0"?>
<package>
  <name>summit_xl_navigation</name>
  <version>1.1.3</version>
  <description> Navigation launch and config files for Summit XL robot. </description>

  <url type="website">http://ros.org/wiki/summit_xl_navigation</url>
  <url type="repository">https://github.com/RobotnikAutomation/summit_xl_common.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/summit_xl_common/issues</url>

  <author email="rguzman@robotnik.es">Roberto Guzmán</author>

  <maintainer email="asoriano@robotnik.es">Angel Soriano</maintainer>
  <maintainer email="avillena@robotnik.es">Álvaro Villena</maintainer>
  <maintainer email="dredo@robotnik.es">David Redó</maintainer>
  <maintainer email="aarnal@robotnik.es">Alejandro Arnal</maintainer>
  <maintainer email="mbosch@robotnik.es">Marc Bosch</maintainer>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>teb_local_planner</run_depend>
  <run_depend>eband_local_planner</run_depend>
  <run_depend>costmap_prohibition_layer</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>global_planner</run_depend>

</package>
